Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetTextObj.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, Text> yoda
        Text ret = yoda:useForce(one, two)
        output "passed"
     end
end
