Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjIntegerRetNumObjFail.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, Number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
